po: update po/es_MX/grant.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_MX/grant.po
+++ b/po/es_MX/grant.po
@@ -3,15 +3,18 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # joseagrc <jose.arturo.garcia@gmail.com>, 2011
+# joseagrc <jose.arturo.garcia@gmail.com>, 2011
+# n4mor <wey_man@hotmail.com>, 2014
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # n4mor <wey_man@hotmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-04 21:45+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
@@ -90,11 +93,11 @@ msgstr "Cantidad donada"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Currency"
-msgstr ""
+msgstr "Moneda de la donación"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
-msgstr ""
+msgstr "Motivo de la donación"
 
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
@@ -119,8 +122,8 @@ msgstr "Eliminar Donación"
 #: CRM/Grant/Form/Task/Delete.php
 msgid "%count grant deleted."
 msgid_plural "%count grants deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "% de donación eliminada."
+msgstr[1] "% de donaciones eliminadas."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -136,27 +139,27 @@ msgstr "Donación(es) actualizadas: %1 (Total seleccionadas: %2)"
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
-msgstr ""
+msgstr "acceder a CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
-msgstr ""
+msgstr "Ver todas las donaciones"
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
-msgstr ""
+msgstr "Editar donación"
 
 #: CRM/Grant/Info.php
 msgid "Create and update grants"
-msgstr ""
+msgstr "Crear y actualizar donaciones "
 
 #: CRM/Grant/Info.php
 msgid "delete in CiviGrant"
-msgstr ""
+msgstr "eliminar en CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "Delete grants"
-msgstr ""
+msgstr "Eliminar donaciones"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
@@ -180,7 +183,7 @@ msgstr "Solcitado"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Granted"
-msgstr ""
+msgstr "Donado"
 
 #: CRM/Grant/Task.php
 msgid "Export Grants"
@@ -208,11 +211,11 @@ msgstr "(moneda original)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
-msgstr ""
+msgstr "Estado de la donación(es)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr ""
+msgstr "Tipo de donación(es) "
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -315,8 +318,8 @@ msgstr "No se han registrado Donaciones de este contacto."
 
 #: CRM/Grant/Task.php
 msgid "Export grants"
-msgstr ""
+msgstr "Exportar subvenciones"
 
 #: CRM/Grant/Task.php
 msgid "Update grants"
-msgstr ""
+msgstr "Actualizar subvenciones"
