--- a/po/fr_CA/campaign.po
+++ b/po/fr_CA/campaign.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 14:36+0000\n"
+"PO-Revision-Date: 2016-11-04 19:17+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -558,7 +558,7 @@ msgstr "administrer CiviCampaign"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaign, survey and petition types and their status"
-msgstr ""
+msgstr "Créer de nouveaux types de campagne, de sondage et de pétition et leur statut"
 
 #: CRM/Campaign/Info.php
 msgid "manage campaign"
@@ -689,7 +689,7 @@ msgstr "voir le jeu de résultats"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Incomplete. Click to configure result set."
-msgstr "Incomplèt. Cliquez sur pour configurer le jeu de résultats."
+msgstr "Incomplet. Cliquez pour configurer le jeu de résultats."
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Search Petition"
@@ -786,7 +786,7 @@ msgstr "Champs sur la pétition."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Click here for new profile"
-msgstr ""
+msgstr "Cliquez ici pour un nouveau profil"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
