--- a/po/es_MX/pcp.po
+++ b/po/es_MX/pcp.po
@@ -4,15 +4,18 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Alberto Torreblanca <alberto@torreblanca.pe>, 2013
+# ixiam_jose <jrombini@hotmail.com>, 2012
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # ixiam_jose <jrombini@hotmail.com>, 2012
 # Leonardo Ordonez Checa <leoxordonez@gmail.com>, 2014
+# Leonardo Ordonez Checa <leoxordonez@gmail.com>, 2014
+# sluc23 <sluc23@hotmail.com>, 2012
 # sluc23 <sluc23@hotmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-04 21:46+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +42,7 @@ msgstr "Invitar amigos"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "URL for this Page"
-msgstr ""
+msgstr "URL para esta Página"
 
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
@@ -55,7 +58,7 @@ msgstr "Aprobación requerida"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Owner Email Notification"
-msgstr ""
+msgstr "Notificación de email del propietario"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -77,13 +80,13 @@ msgstr "Texto del enlace de 'Crear Página de Campaña Personal'"
 msgid ""
 "This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr ""
+msgstr "El registro de este evento está siendo posible gracias al esfuerzo de <strong>%1</strong> , quien está dando soporte a nuestra campaña."
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
 "This contribution is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr ""
+msgstr "Esta donación está siendo posible gracias al esfuerzo de <strong>%1</strong> , quien está dando soporte a nuestra campaña."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -151,7 +154,7 @@ msgstr "Una notificación a través de correo electrónico ha sido enviada al pa
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Email Sent"
-msgstr ""
+msgstr "Correo electrónico enviado"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
@@ -163,7 +166,7 @@ msgstr "El perfil de quien apoya la campaña no está establecido para esta Pág
 msgid ""
 "Owner Notification is not set for this Personal Campaign Page. Please "
 "contact the site administrator if you need assistance."
-msgstr ""
+msgstr "La notificación de propietario no está establecida para esta página de campaña personal. Por favor, contacte con el administrador del sitio si necesita asistencia."
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
@@ -180,7 +183,7 @@ msgstr "Título de la Página de Campaña Personal"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Intro Text"
-msgstr ""
+msgstr "Texto de introducción"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Page Text"
@@ -200,7 +203,7 @@ msgstr "Tipo de Entidad de Destino"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Owner Notification"
-msgstr ""
+msgstr "Notificación al propietario"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
@@ -220,7 +223,7 @@ msgstr "Editar tu Página de Campaña Personal"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
-msgstr ""
+msgstr "Bienvenida"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -256,7 +259,7 @@ msgstr "Cuadro de Honor"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Notify me via email when someone donates to my page"
-msgstr ""
+msgstr "Notificarme vía email cuando alguien dona a mi página"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
@@ -375,7 +378,7 @@ msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
 "caused by using your browser's Back button or by using an incomplete or "
 "invalid link."
-msgstr ""
+msgstr "No podemos cargar la página solicitada debido a un enlace incompleto. Esto puede estar causado al usar el botón “retroceso” de tu navegador o por usar un enlace incompleto o inválido."
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid "Could not find source page id."
@@ -445,7 +448,7 @@ msgstr "¡Envíe emails invitando a sus amigos a apoyar su campaña!"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Copy this link to share directly with your network!"
-msgstr ""
+msgstr "¡Copia este enlace para compartirlo directamente con tu red de contactos!"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
@@ -489,13 +492,13 @@ msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
 "names (or nicknames) of the people who supported you. (Donors will have the "
 "option to remain anonymous. Their names will NOT be listed.)"
-msgstr ""
+msgstr "Si esta opción es seleccionada, un \"cuadro de honor\" será mostrado con los nombres (o apodos) de las personas que le apoyaron. (Las personas donantes tendrán la opción de permanecer anónimas. Sus nombres NO serán listados)."
 
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, you will receive an email notification when "
 "people contribute to your campaign."
-msgstr ""
+msgstr "Si esta opción está seleccionada, recibirás una notificación por email cuando alguien contribuya a tu campaña."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -520,7 +523,7 @@ msgid ""
 "other fields in the profile. If you don't yet have an appropriate Profile "
 "configured, you will need to <a href='%1'>create one first</a>, and then "
 "return to this form to select it."
-msgstr ""
+msgstr "El Perfil de apoyo se utiliza para recoger o actualizar información básica (p ej. nombre y dirección de correo electrónico) de los usuarios cuando éstos crean una página de campaña personal. El perfil que seleccione debe estar configurado con \"creación de cuenta requerida\" (en Configuración de perfil » Configuración avanzada). Debe incluir un campo de dirección de correo electrónico - y también puede incluir cualquier número de otros campos en el perfil. Si todavía no tiene un perfil apropiado configurado, tendrá que <a href='%1'> primero </a>, y luego regresar a este formulario para seleccionarlo."
 
 #: templates/CRM/PCP/Form/Contribute.tpl templates/CRM/PCP/Form/Event.tpl
 msgid ""
@@ -564,7 +567,7 @@ msgid ""
 "This link will appear on the Event registration Thank-you page as well as on"
 " each Personal Campaign Page. Leave blank if you do not want constituents to"
 " be prompted to create their own Personal Campaign Pages."
-msgstr ""
+msgstr "Texto para el enlace de invitación a los contactos para crear una página de campaña personal. Este enlace aparecerá en la página de agradecimiento del registro del evento, así como también en cada página de campaña personal. Dejar en blanco si no quiere que sus contactos puedan crear sus propias páginas de campaña personal."
 
 #: templates/CRM/PCP/Form/Event.hlp
 msgid ""
@@ -591,7 +594,7 @@ msgstr "Permitir a los contactos crear su propias páginas de recaudación de fo
 msgid ""
 "You can also place additional links (or menu items) allowing constituents to"
 " create their own fundraising pages using the following URL:"
-msgstr ""
+msgstr "Puedes además incluir enlaces adicionales (o elementos del menú) permitiendo a los socios crear sus propias páginas de donación usando la siguiente URL:"
 
 #: templates/CRM/PCP/Form/PCP.tpl templates/CRM/PCP/Page/PCP.hlp
 msgid ""
@@ -743,34 +746,34 @@ msgstr "Enlazado a la Página de Contribución"
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "You have received a donation at your personal page"
-msgstr ""
+msgstr "Has recibido una donación en tu página personal"
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Your fundraising total has been updated."
-msgstr ""
+msgstr "Tu recaudación total ha sido actualizada."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid ""
 "The donor's information is listed below.  You can choose to contact them and"
 " convey your thanks if you wish."
-msgstr ""
+msgstr "La información de los donantes está listada abajo. Puedes contactar con ellos y mostrar tu agradecimiento si lo deseas."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid ""
 "The donor's name has been added to your honor roll unless they asked not to "
 "be included."
-msgstr ""
+msgstr "El nombre del donante ha sido añadido a tu listado de donantes salvo que ellos quisieran no ser añadidos."
 
 #: xml/templates/message_templates/pcp_owner_notify_subject.tpl
 msgid "Someone has just donated to your personal campaign page"
-msgstr ""
+msgstr "Alguien ha donado a tu página de campaña personal."
 
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Personal Campaign Page Owner Notification"
-msgstr ""
+msgstr "Notificación al propietario de página de campaña personal"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -806,7 +809,7 @@ msgstr "Ir a su página"
 msgid ""
 "When you view your campaign page WHILE LOGGED IN, the page includes links to"
 " edit your page, tell friends, and update your contact info."
-msgstr ""
+msgstr "Cuando usted ve su página de campaña con la SESIÓN INICIADA, la página incluye enlaces para editar su página, contarle a sus amigos y actualizar su información de contacto."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -827,7 +830,7 @@ msgid ""
 "Your personal campaign page has been reviewed. There were some issues with "
 "the content which prevented us from approving the page. We are sorry for any"
 " inconvenience."
-msgstr ""
+msgstr "Tu página personal de la campaña ha sido revisada. Hay algunos problemas con el contenido que no nos permite aprobar la página. Disculpa las molestias."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -924,40 +927,40 @@ msgstr "Haga clic o pegue este enlace en su buscador "
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Block"
-msgstr ""
+msgstr "Bloque de la PCP"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Use Thermometer?"
-msgstr ""
+msgstr "¿Usar termómetro?"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Show Honor Roll?"
-msgstr ""
+msgstr "¿Mostrar el cuadro de honor?"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Notify Owner?"
-msgstr ""
+msgstr "¿Notificar al propietario?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "PCP Block ID"
-msgstr ""
+msgstr "ID del bloque de la PCP"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity"
-msgstr ""
+msgstr "Entidad objetivo"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity ID"
-msgstr ""
+msgstr "ID de la entidad objetivo"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Approval Required?"
-msgstr ""
+msgstr "¿Requiere aprovación?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell a Friend Enabled?"
-msgstr ""
+msgstr "¿\"Recomendar a un amigo\" habilitado?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell A Friend Limit"
-msgstr ""
+msgstr "Límite de \"Recomendar a un amigo\""
