--- a/po/fr_CA/case.po
+++ b/po/fr_CA/case.po
@@ -9,14 +9,15 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2016
 # samuelsov <samuel@koumbit.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-04 19:59+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -630,7 +631,7 @@ msgstr ""
 msgid ""
 "Use this screen to define or update the Case Roles, Activity Types, and "
 "Timelines for a case type."
-msgstr ""
+msgstr "Utilisez cet écran pour définir ou mettre à jour les rôles de dossier, les types d'activité et les délais pour un type de dossier."
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
@@ -655,7 +656,7 @@ msgstr "Séquence"
 #: ang/crmCaseType/list.html
 msgid ""
 "A Case Type describes a group of related tasks, interactions, or processes."
-msgstr "A type de cas décrit un groupe de tâches reliées, d’interactions ou de processus."
+msgstr "Un type de dossier décrit un groupe de tâches connexes, d'interactions et de processus."
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Assign to Creator"
@@ -1043,7 +1044,7 @@ msgstr "Tous les Dossiers Avec des Activités à venir"
 msgid ""
 "There are no open cases with activities scheduled in the next two weeks. Use"
 " %1 to expand your search."
-msgstr "Il n'y à pas de Dossier existant avec des activités à venir dans les 2 prochaines semaines. Utilisez %1 pour étendre votre recherche."
+msgstr "Il n'y a aucun dossier ouvert avec des activités prévues dans les deux prochaines semaines. Utilisez %1 pour étendre votre recherche."
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "My Cases With Recently Performed Activities"
@@ -1057,7 +1058,7 @@ msgstr "Tous les Dossiers Avec des Activités Récemment Effectuées"
 msgid ""
 "There are no cases with activities scheduled in the past two weeks. Use %1 "
 "to expand your search."
-msgstr "Il n'y à pas de Dossier existant avec des activités à venir dans les 2 dernières semaines. Utilisez %1 pour étendre votre recherche."
+msgstr "Aucun dossier avec des activités programmées au cours des deux dernières semaines. Utilisez %1 pour étendre votre recherche."
 
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Manager"
