po: update po/es_MX/queue.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_MX/queue.po
+++ b/po/es_MX/queue.po
@@ -4,12 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # ixiam_jose <jrombini@hotmail.com>, 2012
+# ixiam_jose <jrombini@hotmail.com>, 2012
+# sluc23 <sluc23@hotmail.com>, 2012
 # sluc23 <sluc23@hotmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-04 21:46+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
@@ -40,4 +42,4 @@ msgstr "Corredor de la cola"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "ID de la cola"
