--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-03 19:30+0000\n"
+"PO-Revision-Date: 2016-11-04 18:51+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -5503,7 +5503,7 @@ msgid ""
 "The following credit card options will be offered to contributors using "
 "Online Contribution pages. You will need to verify which cards are accepted "
 "by your chosen Payment Processor and update these entries accordingly."
-msgstr ""
+msgstr "Les options de carte de crédit suivantes seront offertes aux contributeurs utilisant les pages de contribution en ligne. Vous devrez vérifier quelles cartes sont acceptées par votre passerelle de paiement choisi et actualiser ces entrées en conséquence."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
