po: update po/fr_CA/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/financial.po
+++ b/po/fr_CA/financial.po
@@ -6,12 +6,13 @@
 # Mathieu Lutfy <mathieu@bidon.ca>, 2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
+# Rick Paré <rick.pare69@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-04 18:34+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -688,7 +689,7 @@ msgstr "Les contributions reçues dans ce compte sont-elles déductibles d'impô
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid "Does this account hold taxes collected?"
-msgstr ""
+msgstr "Est-ce que ce compte collecte les taxes?"
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid ""
@@ -1071,7 +1072,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
-msgstr ""
+msgstr "Propriétaire du compte financier"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid ""
@@ -1080,7 +1081,7 @@ msgid ""
 "account. Generally, they will be from the following list: BANK, AR, OCASSET,"
 " FIXASSET, OASSET, AP, OCLIAB, LTLIAB, EQUITY, INC, COGS, EXP, EXEXP (though"
 " there may be others in your version of QuickBooks)."
-msgstr ""
+msgstr "Pour exporter vers QuickBooks, exportez votre plan comptable et ouvrez-le avec un éditeur de texte. Vous pourrez voir le code du type de compte pour chaque compte. En général, ils seront les suivants: BANK, AR, OCASSET, FIXASSET, OASSET, AP, OCLIAB, LTLIAB, EQUITY, INC, COGS, EXP, EXEXP (bien qu'il puisse y en avoir d'autres dans QuickBooks)."
 
 #: templates/CRM/Financial/Form/PaypalExpress.tpl
 #: templates/CRM/Financial/Form/PaypalPro.tpl
@@ -1094,7 +1095,7 @@ msgid ""
 "href=\"%3\">premiums</a> are associated with financial accounts so that they"
 " can result in the proper double-entry transactions to export to your "
 "accounting system."
-msgstr ""
+msgstr "Les comptes financiers correspondent à ceux de votre système comptable. <a href=\"%1\">Types financiers</a>, <a href=\"%2\">moyens de paiement</a> et <a href=\"%3\">gestion des cadeaux</a> sont associés avec les comptes financiers afin qu'ils puissent donner lieu à des transactions à double entrée propres à exporter vers votre système comptable."
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
