--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-03 20:25+0000\n"
+"PO-Revision-Date: 2016-11-04 19:51+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -13191,7 +13191,7 @@ msgstr "Voulez-vous vraiment annuler ?"
 
 #: ang/crmUi.js
 msgid "Revert"
-msgstr ""
+msgstr "Annuler"
 
 #: ang/crmUi.js
 msgid "Revert %1?"
@@ -26168,7 +26168,7 @@ msgstr "Profils distants activés"
 
 #: CRM/Utils/Check.php
 msgid "View details and manage alerts"
-msgstr ""
+msgstr "Afficher les détails et gérer les alertes"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Emergency"
@@ -26471,7 +26471,7 @@ msgstr ""
 #: templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
 msgid "add another choice"
-msgstr ""
+msgstr "ajouter un autre choix"
 
 #: templates/CRM/Custom/Import/Form/DataSource.hlp
 msgid ""
