po: update po/fr_FR/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -4,17 +4,23 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
+# Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
+# Moyg <moygwp+transifex@gmail.com>, 2014
 # Moyg <moygwp+transifex@gmail.com>, 2014
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe Migrenne <migrenne@gmail.com>, 2015
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# SR71 <ben.alard@gmail.com>, 2012
+# tonthon <tonthon21@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
 # Torrance Hodgson <torrance123@gmail.com>, 2015
+# Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # Virginie Ganivet <virginie@cividesk.com>, 2015
@@ -23,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"PO-Revision-Date: 2016-11-04 21:48+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -298,7 +304,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/AdditionalInfo.php
 msgid "Credit Note ID"
-msgstr ""
+msgstr "Identifiant de la note de crédit"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Introduction Text"
@@ -377,11 +383,11 @@ msgstr "Expéditeur du courriel pour le reçu"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt cc"
-msgstr ""
+msgstr "Adresse CC pour le reçu"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt bcc"
-msgstr ""
+msgstr "Adresse BCC pour le reçu"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt Text"
@@ -389,7 +395,7 @@ msgstr "Texte du reçu"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Page Active?"
-msgstr ""
+msgstr "La page est-elle active ?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Amount Block Active?"
@@ -574,7 +580,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Duration Unit"
-msgstr ""
+msgstr "Unité de durée"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Logo"
@@ -722,7 +728,7 @@ msgstr "Cet identifiant de facture existe déjà dans la base de données."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "This Credit Note ID already exists in the database."
-msgstr ""
+msgstr "Cette identifiant de la note de crédit existe déjà dans la base de données."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Send Initial Reminder"
@@ -770,7 +776,7 @@ msgstr "Envoyer un reçu ?"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Date"
-msgstr ""
+msgstr "Date du remboursement"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Payment amount cannot be greater than owed amount"
@@ -1768,7 +1774,7 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Invoice.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Email Invoice"
-msgstr ""
+msgstr "Facture par courriel"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Print Contribution Invoice"
@@ -1776,7 +1782,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "PDF Invoice"
-msgstr ""
+msgstr "Facture PDF"
 
 #: CRM/Contribute/Form/Task/Invoice.php CRM/Contribute/Form/Task/PDF.php
 msgid "Selection required"
@@ -2326,7 +2332,7 @@ msgstr "Numéro de référence interne unique de cette contribution."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Unique internal Credit Note ID for this contribution."
-msgstr ""
+msgstr "Identifiant unique de la note de crédit pour cette contribution."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Date that a thank-you message was sent to the contributor."
@@ -3616,13 +3622,13 @@ msgstr "Note : les liens aux réseaux sociaux seront automatiquement inclus si v
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Automatic Receipting"
-msgstr ""
+msgstr "Création automatique de reçus"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
 "Check this box if you want an electronic receipt to be sent automatically to"
 " the contributor's email address."
-msgstr ""
+msgstr "Cochez cette case si vous voulez qu'un reçu soit automatiquement envoyé par courriel au contributeur."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
@@ -3684,7 +3690,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "CC Receipts"
-msgstr ""
+msgstr "CC pour le reçu"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
@@ -3696,7 +3702,7 @@ msgstr "Si des membres de votre organisation souhaitent recevoir une copie des a
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "BCC Receipts"
-msgstr ""
+msgstr "Bcc pour le reçu"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
@@ -3709,7 +3715,7 @@ msgstr "Si des membres de votre organisation souhaitent recevoir en copie caché
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.tpl
 msgid ""
 "Use this form to configure the thank-you message and receipting options."
-msgstr ""
+msgstr "Ce formulaire permet de configurer le message de remerciement et les options liées au reçu."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Widget.hlp
 msgid ""
@@ -4662,14 +4668,14 @@ msgid ""
 "Use this section to indicate that the contribution came in via a "
 "constituent's Personal Campaign Page (PCP), OR should be credited to that "
 "PCP post facto."
-msgstr ""
+msgstr "Utilisez cette section pour indiquer que la contribution est faite par l'intermédiaire d'une page de campagne personnelle ou doit être crédité à celle-ci a posteriori."
 
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
 "When contributions are made via a Personal Campaign Page a soft credit (of "
 "type 'Personal Campaign Page') is automatically created and assigned to the "
 "'owner' of the the Personal Campaign Page."
-msgstr ""
+msgstr "Lorsque les contributions sont faites par l'intermédiaire d'une page de campagne personnelle un crédit indirect de type 'Page de campagne personnelle' est automatiquement créé et attribué à l'initiateur de la campagne."
 
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
@@ -4798,7 +4804,7 @@ msgstr "Reçu de contribution"
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 msgid "Total Tax"
-msgstr ""
+msgstr "Montant total des taxes"
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 msgid ""
@@ -4991,15 +4997,15 @@ msgstr "Contribution périodique"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid "All recurring contributions"
-msgstr ""
+msgstr "Toutes les contributions récurrentes"
 
 #: CRM/Contribute/BAO/ContributionRecur.php CRM/Contribute/BAO/Query.php
 msgid "Recurring contributions with at least one payment"
-msgstr ""
+msgstr "Contributions récurrentes avec au moins un paiement"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "All recurring contributions regardless of payments"
-msgstr ""
+msgstr "Toutes les contributions récurrentes indépendamment des paiements"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -5301,7 +5307,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 msgid "Click arrow to view payment details."
-msgstr ""
+msgstr "Cliquez sur la flèche pour voir les détails du paiement."
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 msgid "Total Cancelled Soft Credits"
@@ -5319,7 +5325,7 @@ msgstr ""
 msgid ""
 "Note: if the correct payment method is not listed here (e.g. for in-kind "
 "donations) ask your administrator to add a new option to this list."
-msgstr ""
+msgstr "Noter: si le mode de paiement désiré n'est pas dans la liste (ex: pour les dons en nature), demandez à votre administrateur de l'ajouter."
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Pay Now"
