--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 19:08+0000\n"
+"PO-Revision-Date: 2016-11-04 17:41+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -5130,7 +5130,7 @@ msgstr ""
 #: CRM/Contribute/Form/Contribution.php CRM/Contribute/Selector/Search.php
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Pay with Credit Card"
-msgstr ""
+msgstr "Payer avec carte de crédit"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Transaction ID for the refund payment"
@@ -5269,7 +5269,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "No payments found for this %1 record"
-msgstr ""
+msgstr "Aucun paiement trouvé pour cet enregistrement %1"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
