po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -4,12 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # AlbertFR <albert.bruc.ab@gmail.com>, 2015
+# AlbertFR <albert.bruc.ab@gmail.com>, 2015
 # Anaïs V. <anais.vidal1@gmail.com>, 2015
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
 # BFPTC <webmaster@bienfaitpourta.com>, 2016
+# Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # elma dontovska <elmadont@gmail.com>, 2016
+# ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Imane Sadaoui <imane.sadaoui@gmail.com>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
@@ -20,7 +23,10 @@
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # ShevAbam, 2016
+# ShevAbam, 2016
+# SR71 <ben.alard@gmail.com>, 2012
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
+# Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # William Blondel <william.blondel@gmx.fr>, 2016
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
@@ -29,8 +35,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-13 12:06+0000\n"
-"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
+"PO-Revision-Date: 2016-11-04 21:49+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2921,7 +2927,7 @@ msgid ""
 "Screens > Custom Fields and click ‘edit’ on the field you want to use. Look "
 "at the URL. The last part of the URL will be an equal sign and a number "
 "(=12). The number (12 in this example) is the id of that custom field."
-msgstr ""
+msgstr "Des champs de fusion personnalisés peuvent également être ajoutés aux organisations. Ces champs sont créés dans un ensemble de champs personnalisés pour ajouter des informations sur les individus. Pour créer un ensemble de champs personnalisés, allez à Administrer > Personnaliser les données et écrans > Données personnalisées."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "Address Tokens"
@@ -5256,7 +5262,7 @@ msgid ""
 "If your organization has modified the default versions of System Workflow "
 "message templates, then the changes and bug fixes included in an upgrade "
 "will need to be merged with your modified versions."
-msgstr ""
+msgstr "Si votre organisation a modifié les versions par défaut des modèles de message de processus système, les modifications et les corrections de bogues incluses dans une mise à niveau devront être fusionnées avec vos versions modifiées."
 
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
 msgid ""
@@ -5862,7 +5868,7 @@ msgstr "Pur afficher une image, vous devez ajouter certains paramètres à cette
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Parameters"
-msgstr ""
+msgstr "Paramètres"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Values"
@@ -6310,7 +6316,7 @@ msgstr "Les rappels programmés permettent d'envoyer automatiquement aux contact
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid "Add Reminder"
-msgstr ""
+msgstr "Ajouter un rappel"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
@@ -6424,7 +6430,7 @@ msgstr "Il n'y a pas d'étiquettes présentes. Vous pouvez <a href='%1'> ajouter
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Merge tag %1 into:"
-msgstr ""
+msgstr "Fusionner l'étiquette %1 dans :"
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "- select tag -"
@@ -6432,7 +6438,7 @@ msgstr "- sélectionnez une étiquette -"
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Note: the selected tag is used by additional entities."
-msgstr ""
+msgstr "Note : les étiquettes sélectionnées sont utilisées par d'autres entités."
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Select a tag"
@@ -6452,7 +6458,7 @@ msgstr "Les valeurs relatives du mois sont calculés en fonction de la durée qu
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Upload Document"
-msgstr ""
+msgstr "Télécharger un document"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Please upload document"
@@ -6468,11 +6474,11 @@ msgstr "Libre"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "After menu element"
-msgstr ""
+msgstr "Après l'élément de menu"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Before menu element"
-msgstr ""
+msgstr "Avant l'élément de menu"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator"
@@ -6492,15 +6498,15 @@ msgstr "Configurer CKEditor"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Contacts with no preferred language"
-msgstr ""
+msgstr "Contacts avec aucune langue préférée"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipients language"
-msgstr ""
+msgstr "Langue des destinataires"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "System default language"
-msgstr ""
+msgstr "Langue par défaut du système"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Follow recipient preferred language"
@@ -6536,7 +6542,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
-msgstr ""
+msgstr "Échec de la sauvegarde"
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid ""
@@ -6573,7 +6579,7 @@ msgstr ""
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "CiviCRM System Status"
-msgstr ""
+msgstr "CiviCRM État du système"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
@@ -6605,7 +6611,7 @@ msgstr ""
 msgid ""
 "Compose a message on-screen for general use in emails or document output, or"
 " upload a pre-composed document for mail-merge."
-msgstr ""
+msgstr "Composez un message à l'écran pour une utilisation générale dans les courriels ou les productions de documents, ou téléchargez un document pré-composé pour la fusion de texte."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Upload the document in .docx or .odt format."
@@ -6655,19 +6661,19 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "Calendrier"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
-msgstr ""
+msgstr "Symbol spécial inclus"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency symbol (e.g. '$')"
-msgstr ""
+msgstr "symbol monnétaire (par exemple '$')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency ISO code (e.g. 'USD')"
-msgstr ""
+msgstr "Code ISO de la monnaie (par exemple 'USD')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "monetary amount, formatted according to selected Monetary Locale"
@@ -6727,7 +6733,7 @@ msgstr ""
 msgid ""
 "If enabled, CiviCRM will allow users to submit profiles from external sites."
 " This is disabled by default to limit abuse."
-msgstr ""
+msgstr "If activé, CiviCRM permet aux utilisateurs de soumettre des profils depuis des sites externes. Déactivé par défaut pour limiter les abus."
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
@@ -6804,14 +6810,14 @@ msgstr ""
 msgid ""
 "Change all occurrences of a word or phrase in CiviCRM screens (e.g. replace "
 "all occurrences of 'Contribution' with 'Donation')."
-msgstr ""
+msgstr "Substitue toutes les occurrences d'un ou d'une phrase dans les écrans de CiviCRM (ex : substitue toutes les occurrences de ‘Contribution' par ‘Donation')."
 
 #: templates/CRM/Admin/Form/WordReplacements.tpl
 msgid ""
 "Use <strong>Word Replacements</strong> to change all occurrences of a word "
 "or phrase in CiviCRM screens (e.g. replace all occurrences of 'Contribution'"
 " with 'Donation')."
-msgstr ""
+msgstr "Utilisez<strong>Remplacement de mots</strong> pour changer toutes les occurrences d'un mot ou d'une phrase dans les écrans de CiviCRM (ex : remplacer toutes les occurrences de ‘Contribution' par ‘Donation')."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Chaining"
@@ -6892,7 +6898,7 @@ msgid ""
 "recurring basis. Messages used for membership renewal reminders, as well as "
 "event and activity related reminders should be created via <a "
 "href=\"%1\">Schedule Reminders</a>."
-msgstr ""
+msgstr "Les modèles de messages vous permettent de créer facilement des courriels ou des lettres semblables sur une base régulière. Les messages utilisés pour les rappels de renouvellement d'adhésion ainsi que pour les rappels liés à un événement et à une activité doivent être créés via <a href=\"%1\">Planifier les rappels</a>."
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6900,7 +6906,7 @@ msgid ""
 "However, subscribe, unsubscribe and opt-out messages are configured at <a "
 "href=\"%1\">Administer > CiviMail > Headers, Footers and Automated "
 "Messages</a>."
-msgstr ""
+msgstr "Vous pouvez aussi utiliser les modèles de messages pour le contenu des envois massifs (CiviMail). Toutefois, les messages d'abonnement, de désabonnement et de désengagement sont configurés via <a href=\"%1\">Administrer > Envois massifs > Entêtes, pied de pages et messages automatiques</a>."
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
