po: update po/fr_FR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
+# Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
 # SR71 <ben.alard@gmail.com>, 2012
 # CARFIL <c.carfil.it@mairie-dammarie-les-lys.fr>, 2013
 # Peter <webmaster@lebouclier.com>, 2015-2016
@@ -11,14 +12,18 @@
 # Philippe Migrenne <migrenne@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Seb35 <seb35wikipedia@gmail.com>, 2011
+# Seb35 <seb35wikipedia@gmail.com>, 2011
+# SR71 <ben.alard@gmail.com>, 2012
 # tonthon <tonthon21@gmail.com>, 2011
+# tonthon <tonthon21@gmail.com>, 2011
+# Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # Xynn <xynn.anhnguyen@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"PO-Revision-Date: 2016-11-04 21:49+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -439,7 +444,7 @@ msgstr "Merci de saisir le type de paiement."
 
 #: CRM/Member/Form/Membership.php
 msgid "Please Select a Soft Credit Type"
-msgstr ""
+msgstr "Veuillez sélectionner un type de crédit indirect"
 
 #: CRM/Member/Form/Membership.php
 msgid "Please select a contact"
@@ -569,7 +574,7 @@ msgstr "Séparer le paiement de l'adhésion"
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid "Membership Types Label"
-msgstr ""
+msgstr "Étiquettes de types d'adhésions"
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid "Not offered"
@@ -600,7 +605,7 @@ msgid ""
 "user to select BOTH an auto-renew AND a non-auto-renew membership. This "
 "requires submitting multiple processor transactions, and is not supported "
 "for one or more of the payment processors enabled under the Amounts tab."
-msgstr ""
+msgstr "La grille de prix de l'adhésion associée à cette contribution en ligne permet à un utilisateur de sélectionner à la fois une adhésion avec auto-renouvellement ou sans auto-renouvellement. Cela nécessite de soumettre plusieurs transactions à la passerelle de paiement, mais ce n'est pas pris en charge pour un ou plusieurs des passerelles de paiement activées sous l'onglet Grille de prix."
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid ""
@@ -1270,7 +1275,7 @@ msgstr "et date de fin %1"
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipStandalone.js
 msgid "This contact has an existing %1 membership at %2 with %3 status%4."
-msgstr ""
+msgstr "Ce contact a une adhésion existante de type %1 avec l'état %2 avec %3%4"
 
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipStandalone.js
@@ -1783,7 +1788,7 @@ msgid ""
 "Are you sure you want to delete the selected memberships? This delete "
 "operation cannot be undone and will delete all transactions and activity "
 "associated with these memberships."
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir supprimer les adhésions sélectionnées ? Cette opération ne peut pas être annulée et entraînera la perte de toutes les transactions et activités associées à ces adhésions."
 
 #: templates/CRM/Member/Form/Task/PDFLetter.tpl
 msgid "Membership Letter (PDF)"
@@ -1919,8 +1924,8 @@ msgid_plural ""
 "CiviCRM has detected %count records with conflicting transaction IDs within "
 "this data file or relative to existing membership records. These records "
 "have not been imported."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "CiviCRM a détecté un enregistrement avec un identifiant de transaction conflictuel dans ce fichier ou liée à une adhésion existante. Cet enregistrement n'a pas été importé."
+msgstr[1] "CiviCRM a détecté %count enregistrements avec un identifiant de transaction conflictuel dans ce fichier ou liée à une adhésion existante. Ces enregistrements n'ont pas été importés."
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid ""
@@ -2210,7 +2215,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Click <a %1>Add Membership</a> to record a new membership."
-msgstr ""
+msgstr "Cliquez <a %1>Ajoutez une adhésion</a> afin d'enregistrer une nouvelle adhésion."
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid ""
@@ -2419,7 +2424,7 @@ msgstr ""
 
 #: CRM/Member/Task.php
 msgid "Export members"
-msgstr ""
+msgstr "Exporter les membres"
 
 #: CRM/Member/Task.php
 msgid "Print/merge document for memberships"
