--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -5,6 +5,7 @@
 # Translators:
 # Anaïs V. <anais.vidal1@gmail.com>, 2015
 # Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
+# Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
 # Barnicol <g.barnicol@gmail.com>, 2015
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
@@ -20,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
+"PO-Revision-Date: 2016-11-04 21:49+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -138,13 +139,13 @@ msgstr "Une valeur auto_increment_increment plus grande que 1 n'est pour l'insta
 
 #: install/index.php
 msgid "Is the provided database name valid?"
-msgstr ""
+msgstr "Le nom de la base de données est-il valide ?"
 
 #: install/index.php
 msgid ""
 "The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
 " as characters in the name."
-msgstr ""
+msgstr "Le nom de la base de donné n'est pas valide. Veuillez utiliser un nom composé uniquement des caractères 0-9, a-z, A-Z et _ (sans accents, espaces ou autres caractères spéciaux)."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
