po: update po/fr_FR/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/report.po
+++ b/po/fr_FR/report.po
@@ -4,19 +4,23 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
+# Camille Baldock <mademoisellegeek42@gmail.com>, 2011
+# ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# SR71 <ben.alard@gmail.com>, 2012
+# tonthon <tonthon21@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
 # Virginie Ganivet <virginie@cividesk.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"PO-Revision-Date: 2016-11-04 21:48+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -394,7 +398,7 @@ msgstr "Supprimer (dans la corbeille)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact A Full Name"
-msgstr ""
+msgstr "Nom complet du contact A"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type (Contact A)"
@@ -406,7 +410,7 @@ msgstr "Sous-type de contact (Contact A)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact B Full Name"
-msgstr ""
+msgstr "Nom complet du contact B"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type (Contact B)"
@@ -454,11 +458,11 @@ msgstr "ID de la relation"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Relationship Dates Validity"
-msgstr ""
+msgstr "Dates de validité de la relation"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Not expired"
-msgstr ""
+msgstr "Non expiré"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Edit this relationship."
@@ -2077,82 +2081,82 @@ msgstr ""
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "Supprimer le rapport"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid ""
 "Are you sure you want delete this report? This action cannot be undone."
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir supprimer ce rapport ? Cette action ne peux pas être annulée."
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Name"
-msgstr ""
+msgstr "Contact source - Nom"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Name"
-msgstr ""
+msgstr "Contact assigné - Nom"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Name"
-msgstr ""
+msgstr "Contact cible"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Email"
-msgstr ""
+msgstr "Contact source - Courriel"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Email"
-msgstr ""
+msgstr "Contact assigné - Courriel"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Email"
-msgstr ""
+msgstr "Contact cible - Courriel"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Phone"
-msgstr ""
+msgstr "Source - Téléphone"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Phone"
-msgstr ""
+msgstr "Contact assigné - Téléphone"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Phone"
-msgstr ""
+msgstr "Cible - Téléphone"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Activities"
-msgstr ""
+msgstr "Nombre total d'activités"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid ""
 "You cannot use \"Add Contacts to Group\" action unless contacts fields are "
 "selected."
-msgstr ""
+msgstr "Vous ne pouvez pas utiliser \"Ajouter les contacts au groupe\" sans sélectionner des champs de contacts."
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Types"
-msgstr ""
+msgstr "Nombre total de types"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Number of Activities"
-msgstr ""
+msgstr "Nombre total d'activités"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Duration (in Minutes)"
-msgstr ""
+msgstr "Durée totale (en minutes)"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "List all activity(s) for this row."
-msgstr ""
+msgstr "Afficher toutes les activités pour cette ligne."
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Extra information to control grouping"
-msgstr ""
+msgstr "Information supplémentaire pour contrôler les groupements"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Contact Merge"
-msgstr ""
+msgstr "Fusion de contact"
 
 #: CRM/Report/Form/Contribute/DeferredRevenue.php
 msgid "Deferred Financial Account"
@@ -2160,7 +2164,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Net"
-msgstr ""
+msgstr "Net"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "View Contribution Details"
@@ -2168,39 +2172,39 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
-msgstr ""
+msgstr "Courriel suspendu"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Last Year Total"
-msgstr ""
+msgstr "Total de l'an passé"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lifetime Total"
-msgstr ""
+msgstr "Total à vie"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lifetime total"
-msgstr ""
+msgstr "Total à vie"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total amount last year"
-msgstr ""
+msgstr "Total de l'an passé"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total for "
-msgstr ""
+msgstr "Total pour"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total for Fiscal Year "
-msgstr ""
+msgstr "Total pour l'année fiscale"
 
 #: CRM/Report/Form/Contribute/Lybunt.php CRM/Report/Form/Contribute/Sybunt.php
 msgid "Total LifeTime"
-msgstr ""
+msgstr "Total à vie"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Last Contribution Processed"
-msgstr ""
+msgstr "Dernière contribution traitée"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% New Donors"
@@ -2270,23 +2274,23 @@ msgstr ""
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
-msgstr ""
+msgstr "Enregistré par ID de participant"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant Fee"
-msgstr ""
+msgstr "Frais de participation"
 
 #: CRM/Report/Form/Instance.php
 msgid "Configure link to..."
-msgstr ""
+msgstr "Configurer le lien vers..."
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
-msgstr ""
+msgstr "Voir les résultats"
 
 #: CRM/Report/Form/Instance.php
 msgid "Show Criteria"
-msgstr ""
+msgstr "Voir les critères"
 
 #: CRM/Report/Form/Instance.php
 msgid "Cache dashlet for"
@@ -2298,19 +2302,19 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
-msgstr ""
+msgstr "Date du rebond"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "On hold"
-msgstr ""
+msgstr "Suspendu"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold date"
-msgstr ""
+msgstr "Date de suspension"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold reset date"
-msgstr ""
+msgstr "Date de réinitialisation de la suspension"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "--Please Select--"
@@ -2318,15 +2322,15 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Open Rate"
-msgstr ""
+msgstr "Taux d'ouvertures uniques"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Total Open Rate"
-msgstr ""
+msgstr "Taux d'ouverture"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Opt-outs"
-msgstr ""
+msgstr "Demandes d'exclusion"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Groups Included in Mailing"
@@ -2334,7 +2338,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "View Mailing details for this mailing"
-msgstr ""
+msgstr "Afficher les détails de cet envoi"
 
 #: CRM/Report/Form/Member/Lapse.php
 msgid "Lapsed Memberships"
@@ -2346,11 +2350,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Développeur"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
-msgstr ""
+msgstr "Grand Total"
 
 #: CRM/Report/Form.php
 msgid "Contact Modified"
@@ -2366,11 +2370,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
-msgstr ""
+msgstr "Rafraîchir les résultats"
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "Voir les résultats"
 
 #: CRM/Report/Info.php
 msgid "administer private reports"
@@ -2382,27 +2386,27 @@ msgstr ""
 
 #: CRM/Report/Info.php
 msgid "view report sql"
-msgstr ""
+msgstr "voir le sql des rapports"
 
 #: CRM/Report/Info.php
 msgid "View sql used in CiviReports"
-msgstr ""
+msgstr "voir les sql utilisés dans CiviReports"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "View as pdf"
-msgstr ""
+msgstr "Voir en tant que PDF"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
-msgstr ""
+msgstr "Imprimer le rapport"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Export to csv"
-msgstr ""
+msgstr "Exporter au format CSV"
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
-msgstr ""
+msgstr "Lien vers"
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid ""
